Add pizza icon for selected product in restaurant menu

--- a/client/scripts/orders/directives/order-card.html
+++ b/client/scripts/orders/directives/order-card.html
@@ -20,10 +20,10 @@
       <div class="clearfix">
         <ul>
           <li ng-repeat="i in setArrayFromInt(groupOrder.restaurant.data.deliveryCapacity - groupOrder.remainingCapacity) track by $index">
-            <span class="gp-icon gp_pizza filled"></span>
+            <span class="gp-icon gp-pizza filled"></span>
           </li>
           <li ng-repeat="i in setArrayFromInt(groupOrder.remainingCapacity) track by $index">
-            <span class="gp-icon gp_pizza"></span>
+            <span class="gp-icon gp-pizza"></span>
           </li>
         </ul>
       </div>
