--- a/client/scripts/restaurant/directives/receipt-card.html
+++ b/client/scripts/restaurant/directives/receipt-card.html
@@ -47,7 +47,7 @@
       <div class="row">
         <div class="col-50">
           <span class="title">
-            <b>{{ 'total' | translate }}€</b>
+            <b>{{ 'total' | translate }}</b>
           </span>
         </div>
         <div class="col-50">
