--- a/client/scripts/common/directives/timer.html
+++ b/client/scripts/common/directives/timer.html
@@ -1,3 +1,4 @@
 <timer end-time="endTime" interval="1000" finish-callback="callbackTimer.finished()" >
-   {{minutes !== 0 ? minutes : seconds }} {{minutes !== 0 ? "mn" : "sec" }}
+  {{hours !== 0 ? hours : (hours === 0 && minutes !== 0) ? minutes : seconds}}
+  {{hours !== 0 ? "h" : (hours === 0 && minutes !== 0) ? "mn" : "sec"}}
 </timer>
