Use timer directive to properly show hours

--- a/client/scripts/orders/directives/orders-card.html
+++ b/client/scripts/orders/directives/orders-card.html
@@ -7,7 +7,7 @@
       <span class="secondary-buttons">
         <button class="button button-clear button-timer">
           <i class="ion-ios-timer"></i>
-          <timer end-time="order.endingAt" interval="1000"> {{mminutes}}:{{sseconds}}</timer>
+          <ge-timer end-time="{{order.endingAt}}" interval="1000"></ge-timer>
         </button>
       </span>
     </div>
