Allow picking an address when clicking on the delivery address header bar

--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,7 @@
 
   <script src="scripts/bundle.js"></script>
   <script src="scripts/ngConstants.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js"></script>
 </body>
 
 </html>
