--- a/client/scripts/address/directives/delivery-address.html
+++ b/client/scripts/address/directives/delivery-address.html
@@ -1,4 +1,4 @@
 <div on-tap="modal.show()">
-  <span ng-if="deliveryAddress.formatted_address">{{ deliveryAddress.formatted_address | translate }}</span>
+  <span ng-if="deliveryAddress.street">{{ deliveryAddress.street | translate }}</span>
   <span ng-if="deliveryAddress.residency">{{ deliveryAddress.residency | translate }}</span>
 </div>
