--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
 
   <script src="scripts/bundle.js"></script>
   <script src="scripts/ngConstants.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
 </body>
 
 </html>
