--- a/client/scripts/address/directives/address-picker.html
+++ b/client/scripts/address/directives/address-picker.html
@@ -2,8 +2,9 @@
        class="address-picker__input"
        placeholder="{{ 'address' | translate }}">
 <ul class="list">
-    <li class="item" ng-repeat="result in results"
-        on-tap="selectAddress(result)">
-      {{ result.formatted_address }}
-    </li>
+  <li class="item item-avatar address-picker__item" ng-repeat="result in results"
+      on-tap="selectAddress(result)">
+    <h2>{{ result.address_components[0].long_name }}</h2>
+    <p>{{ result.address_components[5].long_name }}, {{ result.address_components[1].long_name }}</p>
+  </li>
 </ul>
