--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
 
   <script src="scripts/bundle.js"></script>
   <script src="scripts/ngConstants.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDK_mx7DE6xXmJ82cKI-7E4gR2FO1b05KM&libraries=places"></script>
 </body>
 
 </html>
